# swapi-project

./: data.transformation.ipynb  data_cleaning.py  data_trans.py  docker-compose.yaml  load_csv.py  logger.py  main.py  pyproject.toml  requirements.txt  schemas.py
data/: cleaned_dataframe.csv  swapi_all_merged.csv  swapi_char.csv  swapi_char_and_details.csv  swapi_details.csv  swapi_homeworld.csv
database/: .env  __init__.py  docker-compose.yml  load_csv.py
endpoints/: char_endpoint.py  details_endpoint.py  get_all_char.py  get_all_char_by_id.py  get_all_planets.py  get_all_planets_by_id.py  homeworld_endpoint.py
routers/: charecters.py  planets.py
